tests/gen-test/test_out/compile-time.txt
error: cannot access runtime value in 'const'
 --> compile-time\root.ctl:2:37
  |
2 | fn sub(a: uint, b: uint) -> uint => const a - b
  |                                     ^^^^^ this is what makes access const
  |        - info: this is a runtime value, outsize of 'const' context
  |
  = help: try moving the access to a non-const function
  = help: or declaring the variable as constant

error: cannot access runtime value in 'const'
 --> compile-time\root.ctl:2:37
  |
2 | fn sub(a: uint, b: uint) -> uint => const a - b
  |                                     ^^^^^ this is what makes access const
  |                 - info: this is a runtime value, outsize of 'const' context
  |
  = help: try moving the access to a non-const function
  = help: or declaring the variable as constant

error: not all blocks were closed when typechecking function
 --> compile-time\root.ctl:2:4
  |
2 | fn sub(a: uint, b: uint) -> uint => const a - b
  |    --- info: happened in this function
  |
  = info: this is a bug in the compiler, please report it

info: mir repr of functions:


error: no entry points found
 = help: add '#[entry]' to a function that should take this role

